src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Client Support</fullName>
        <description>Support Process for the Client</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Feedback Sent</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Reopen</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Spam</fullName>
        </values>
        <values>
            <fullName>Waiting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>IT_Provisioning_Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Feedback Sent</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Reopen</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Spam</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>IT_Support_Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Feedback Sent</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Reopen</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Spam</fullName>
        </values>
        <values>
            <fullName>Waiting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Merchant Support</fullName>
        <description>Support Process for the Merchant</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Feedback Sent</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Reopen</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Spam</fullName>
        </values>
        <values>
            <fullName>Waiting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>User Support</fullName>
        <description>Support Process for the user</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Feedback Sent</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Reopen</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Spam</fullName>
        </values>
        <values>
            <fullName>Waiting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ER_Acceptor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acceptor</label>
        <referenceTo>ER_Acceptor__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_BUPicklist__c</fullName>
        <defaultValue>$User.ER_BUText__c</defaultValue>
        <label>BU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Business_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <formula>TEXT(Owner:User.ER_Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Card_Number__c</fullName>
        <label>Card Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_CaseReason2__c</fullName>
        <label>Case Detailed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ER_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                <fullName>Asset not received</fullName>
                </value>
                <value>
                    <fullName>Balance enquiry</fullName>
                </value>
                <value>
                    <fullName>Transaction enquiry</fullName>
                </value>
                <value>
                    <fullName>Mobile App</fullName>
                </value>
                <value>
                    <fullName>Payment Topics</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Bank account modification</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Financial Topic</fullName>
                </value>
                <value>
                    <fullName>Copy of contract</fullName>
                </value>
                <value>
                    <fullName>Company change</fullName>
                </value>
                <value>
                    <fullName>Card acceptance issue</fullName>
                </value>
                <value>
                    <fullName>Store locator</fullName>
                </value>
                <value>
                    <fullName>Collection</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Special requests (reports, GDPR)</fullName>
                </value>
                <value>
                    <fullName>Acceptance Network</fullName>
                </value>
                <value>
                    <fullName>Card activation</fullName>
                </value>
                <value>
                    <fullName>Permanently block card</fullName>
                </value>
                <value>
                    <fullName>Unblock card</fullName>
                </value>
                <value>
                    <fullName>Apple Pay</fullName>
                </value>
                <value>
                    <fullName>Google Pay</fullName>
                </value>
                <value>
                    <fullName>Acceptance</fullName>
                </value>
                <value>
                    <fullName>Validity</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Unblock</fullName>
                </value>
                <value>
                    <fullName>Characteristic</fullName>
                </value>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Case_Reopened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Reopened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Delivery_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Site</label>
        <referenceTo>ER_Delivery_Site__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Distribution_Point__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution Point</label>
        <referenceTo>ER_Distribution_Point__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>ER_Employee__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Individual</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Reason__c</fullName>
        <label>Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ER_BUPicklist__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ER_Card</fullName>
                    <label>Card</label>
                </value>
                <value>
                    <fullName>ER_Voucher</fullName>
                    <label>Voucher</label>
                </value>
                <value>
                    <fullName>ER_Mobile_App</fullName>
                    <label>Mobile App</label>
                </value>
                <value>
                    <fullName>ER_Reimbursement</fullName>
                    <label>Reimbursement</label>
                </value>
                <value>
                    <fullName>ER_Payment</fullName>
                    <label>Payment</label>
                </value>
                <value>
                    <fullName>ER_General_Information</fullName>
                    <label>General Information</label>
                </value>
                <value>
                    <fullName>ER_Order_Delivery</fullName>
                    <label>Order &amp; Delivery</label>
                </value>
                <value>
                    <fullName>ER_Extranet</fullName>
                    <label>Extranet</label>
                </value>
                <value>
                    <fullName>ER_Contract_modification</fullName>
                    <label>Contract &amp; modification</label>
                </value>
                <value>
                    <fullName>ER_Company_changes</fullName>
                    <label>Company changes</label>
                </value>
                <value>
                    <fullName>ER_Card_acceptance</fullName>
                    <label>Card acceptance</label>
                </value>
                <value>
                    <fullName>ER_Invoicing</fullName>
                    <label>Invoicing</label>
                </value>
                <value>
                    <fullName>ER_Validity</fullName>
                    <label>Validity</label>
                </value>
                <value>
                    <fullName>ER_Complaint</fullName>
                    <label>Complaint</label>
                </value>
                <value>
                    <fullName>ER_Online_support</fullName>
                    <label>Online support</label>
                </value>
                <value>
                    <fullName>ER_Others</fullName>
                    <label>Others</label>
                </value>
                <value>
                    <fullName>ER_Finance</fullName>
                    <label>Finance</label>
                </value>
            <value>
                    <fullName>Acceptance network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Resolution_Time__c</fullName>
        <formula>IF( IsClosed , (ClosedDate - CreatedDate) *24, (NOW() - CreatedDate ) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution Time (in hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Resolution__c</fullName>
        <label>Resolution</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ER_Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store</label>
        <referenceTo>ER_Store__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_SuppliedContactFirstName__c</fullName>
        <label>Web Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_SuppliedContactLastName__c</fullName>
        <label>Web Contact Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Web_CRN__c</fullName>
        <label>Web CRN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Active_Milestone__c</fullName>
        <label>Active Milestone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Amount_OdA__c</fullName>
        <label>Amount OdA (VAT Excluded)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IT_Approval__c</fullName>
        <label>Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approval request sent</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_CT7_Agent_Id__c</fullName>
        <label>CT7 Agent Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_CTI_Call_Id__c</fullName>
        <label>CTI Call Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_CTI_MediaId__c</fullName>
        <externalId>true</externalId>
        <label>IT_CTI_MediaId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Call_Phone__c</fullName>
        <label>Call Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IT_CaseNumber_OLD__c</fullName>
        <label>IT CaseNumber OLD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Case_Detailed_Reason__c</fullName>
        <label>Case Detailed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Case_Reason_Closure__c</fullName>
        <label>Case Reason Closure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Waiting for Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Case_Reason__c</fullName>
        <label>Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CASH WELFARE</fullName>
                </value>
                <value>
                    <fullName>CATALOGUED LAUNCH RESULT</fullName>
                </value>
                <value>
                    <fullName>CHANGE ECONOMIC/CONTRACTUAL CONDITIONS</fullName>
                </value>
                <value>
                    <fullName>CHANGES TO THE PLAN</fullName>
                </value>
                <value>
                    <fullName>COMPLAINT</fullName>
                </value>
                <value>
                    <fullName>FLOWS / REPORT-NO RECEPTION</fullName>
                </value>
                <value>
                    <fullName>INCONSISTENT / REPORT-DATA STREAMS</fullName>
                </value>
                <value>
                    <fullName>INCORRECT INVOICING</fullName>
                </value>
                <value>
                    <fullName>INFO REFUNDS</fullName>
                </value>
                <value>
                    <fullName>INFO REGULATION</fullName>
                </value>
                <value>
                    <fullName>INSURANCE</fullName>
                </value>
                <value>
                    <fullName>INVOICES PAYMENT INFO</fullName>
                </value>
                <value>
                    <fullName>NOT OF COMPETENCE</fullName>
                </value>
                <value>
                    <fullName>PATH LOADING RESULT</fullName>
                </value>
                <value>
                    <fullName>PAYMENT METHOD</fullName>
                </value>
                <value>
                    <fullName>PLATFORM-CREDENTIALS AND RECORDING</fullName>
                </value>
                <value>
                    <fullName>PLATFORM-FAILURE IN OPERATION</fullName>
                </value>
                <value>
                    <fullName>PLATFORM-FUNCTIONALITY</fullName>
                </value>
                <value>
                    <fullName>PRACTICAL VERIFICATION</fullName>
                </value>
                <value>
                    <fullName>PROSPECT</fullName>
                </value>
                <value>
                    <fullName>PROVISIONING</fullName>
                </value>
                <value>
                    <fullName>SICKNESS FUND-MARSH</fullName>
                </value>
                <value>
                    <fullName>SPAM ( self-compliation )</fullName>
                </value>
                <value>
                    <fullName>TICKET COMPLIMENTS-DELIVERY</fullName>
                </value>
                <value>
                    <fullName>TICKET COMPLIMENTS-MARKETABILITY</fullName>
                </value>
                <value>
                    <fullName>TICKET COMPLIMENTS-RE-ISSUE</fullName>
                </value>
                <value>
                    <fullName>TICKET COMPLIMENTS-VERIFICATION OF USE</fullName>
                </value>
                <value>
                    <fullName>TICKET TRANSPORT-SENDING FLOWS</fullName>
                </value>
                <value>
                    <fullName>TICKET TRANSPORT-STATE REQUIRED</fullName>
                </value>
                <value>
                    <fullName>TRACKS-SUPPORT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Case_Study__c</fullName>
        <label>Case Study</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>expenses</fullName>
                </value>
                <value>
                    <fullName>Separate Billing</fullName>
                </value>
                <value>
                    <fullName>Extra-sconto</fullName>
                </value>
                <value>
                    <fullName>Discount Difference</fullName>
                </value>
                <value>
                    <fullName>Incorrect value meals</fullName>
                </value>
                <value>
                    <fullName>Intent</fullName>
                </value>
                <value>
                    <fullName>Order incorrect or missing</fullName>
                </value>
                <value>
                    <fullName>Change company data</fullName>
                </value>
                <value>
                    <fullName>cards Take</fullName>
                </value>
                <value>
                    <fullName>Split</fullName>
                </value>
                <value>
                    <fullName>CIG incorrect or missing</fullName>
                </value>
                <value>
                    <fullName>Invoices no fatt</fullName>
                </value>
                <value>
                    <fullName>VAT wrong</fullName>
                </value>
                <value>
                    <fullName>Theft or scam</fullName>
                </value>
                <value>
                    <fullName>Withholding Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Case_Team__c</fullName>
        <label>Case Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nord - Ovest</fullName>
                </value>
                <value>
                    <fullName>Lombardia - Emilia</fullName>
                </value>
                <value>
                    <fullName>Nord - Est</fullName>
                </value>
                <value>
                    <fullName>Centro - Sud</fullName>
                </value>
                <value>
                    <fullName>Distant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Circuit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Circuit</label>
        <referenceTo>IT_Circuit__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_CloseDate_OLD__c</fullName>
        <label>IT CloseDate OLD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IT_CloseDate__c</fullName>
        <formula>IF(IT_CloseDate_OLD__c = null, ClosedDate, IT_CloseDate_OLD__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IT CloseDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IT_Cluster__c</fullName>
        <formula>Account.IT_Cluster__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_ConsipFase__c</fullName>
        <defaultValue>1</defaultValue>
        <label>ConsipFase</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_CreatedDate_OLD__c</fullName>
        <label>IT CreatedDate OLD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IT_CreatedDate__c</fullName>
        <formula>IF(IT_CreatedDate_OLD__c = null, CreatedDate, IT_CreatedDate_OLD__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IT CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IT_Cut_Off_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cut Off Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Discharge_already_carried_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discharge already carried out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Document_Number__c</fullName>
        <label>Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document</label>
        <referenceTo>IT_Edenred_Document__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Documentation_Outcome__c</fullName>
        <label>Documentation Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Refused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Financial_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Center</label>
        <referenceTo>ER_Financial_Center__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_IVR_Changed_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IT IVR Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_IVR_Level_1__c</fullName>
        <label>IVR Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IT_IVR_Level_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_IVR_Level_2__c</fullName>
        <label>IVR Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IT_IVR_Level_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_IVR_Level_3__c</fullName>
        <label>IVR Level 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IT_IVR_Level_3</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_IVR_Number_Email_Address__c</fullName>
        <label>IVR Number / Email Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Incentive_URL__c</fullName>
        <label>Incentive URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Jira_Code__c</fullName>
        <label>Jira Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Level_Closing_Case__c</fullName>
        <label>Level closing case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Level_Opening_Case__c</fullName>
        <label>Level opening case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Link_To_Portal__c</fullName>
        <formula>IF( NOT(IT_Financial_Center__r.IT_Product2__r.IT_Card__c) ,
		HYPERLINK(&quot;/lightning/cmp/c__LNIT00_iframeOpener?c__calledSystem=SGOP&amp;c__isIframe=false&amp;c__queryString=&quot;, &quot;SGOP&quot;)
		, 

HYPERLINK(&quot;/lightning/cmp/c__LNIT00_iframeOpener?c__calledSystem=Portale+Clienti+Elettronico&amp;c__isIframe=true&amp;c__queryString=portale-clienti?user_type%3Dcard%26redirect_page%3D&quot;+
CASE(TEXT(IT_Financial_Center__r.IT_Service__c),
&quot;0V&quot;,&quot;gestione-anagrafica&quot;,
&quot;0O&quot;,&quot;gestione-anagrafica&quot;,
&quot;1B&quot;,&quot;gestione-anagrafica&quot;,
&quot;1W&quot;,&quot;gestione-anagrafica&quot;,
&quot;1X&quot;,&quot;gestione-conto&quot;,
&quot;1N&quot;,&quot;gestione-anagrafica&quot;,
&quot;1Q&quot;,&quot;gestione-anagrafica&quot;,
&quot;1Y&quot;,&quot;gestione-anagrafica&quot;,
&quot;2X&quot;,&quot;gestione-conto&quot;,
&quot;1L&quot;,&quot;gestione-anagrafica&quot;,
&quot;1M&quot;,&quot;gestione-anagrafica&quot;,
&quot;home&quot;
)
+IF(NOT(ISBLANK(IT_Circuit__r.IT_Circuit_Code__c)) , &apos;%26circ_cd%3D&apos;+IT_Circuit__r.IT_Circuit_Code__c , &apos;&apos;)
, 
CASE(TEXT(IT_Financial_Center__r.IT_Service__c),
&quot;0V&quot;,&quot;Gestione Anagrafica&quot;,
&quot;0O&quot;,&quot;Gestione Anagrafica&quot;,
&quot;1B&quot;,&quot;Gestione Anagrafica&quot;,
&quot;1W&quot;,&quot;Gestione Anagrafica&quot;,
&quot;1X&quot;,&quot;Gestione Conto&quot;,
&quot;1N&quot;,&quot;Gestione Anagrafica&quot;,
&quot;1Q&quot;,&quot;Gestione Anagrafica&quot;,
&quot;1Y&quot;,&quot;Gestione Anagrafica&quot;,
&quot;2X&quot;,&quot;Gestione Conto&quot;,
&quot;1L&quot;,&quot;Gestione Anagrafica&quot;,
&quot;1M&quot;,&quot;Gestione Anagrafica&quot;,
&quot;Portale Clienti&quot;
))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Merchant_Opportunity_WON__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merchant Opportunity WON</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Milestone_Status__c</fullName>
        <label>Milestone Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_New_Customer_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Customer Code</label>
        <referenceTo>ER_Financial_Center__c</referenceTo>
        <relationshipLabel>Cases (New Customer Code)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_No_Electronic_invoicing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NO Electronic invoicing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_ODA__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/cmp/c__LNIT00_iframeOpener?c__calledSystem=SGOP&amp;c__isIframe=false&amp;c__queryString=?para_funzione%3DInserimentoOrdinativo&quot; , &quot;Inserimento ODA &quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ODA</label>
        <type>Text</type>
    </fields>
</CustomObject>